2025-12-03T01:59:19Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19879752874 # 1647
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-12-03
* notice: query file size: 26208
* notice: accum prev / next / diff: re vi: 0 3833 / 0 3835 / +0 +2

2025-11-30T02:08:57Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19792402365 # 1641
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-11-30
* notice: query file size: 26208
* notice: accum prev / next / diff: re vi: 0 3832 / 0 3833 / +0 +1

2025-11-28T12:51:37Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19764350424 # 1638
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-11-28
* notice: query file size: 26208
* notice: accum prev / next / diff: re vi: 0 3830 / 0 3832 / +0 +2

2025-11-24T12:54:01Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19635003975 # 1630
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-11-24
* notice: query file size: 26208
* notice: accum prev / next / diff: re vi: 0 3829 / 0 3830 / +0 +1

2025-11-23T12:43:06Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19611334193 # 1628
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-11-23
* notice: query file size: 26208
* notice: accum prev / next / diff: re vi: 0 3828 / 0 3829 / +0 +1

2025-11-20T12:51:19Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19537476942 # 1622