@@ -1,3 +1,9 @@
+2025-12-03T12:55:53Z:
+* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19894568874 # 1648
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-12-03
+* notice: query file size: 26208
+* notice: accum prev / next / diff: re vi: 0 3835 / 0 3836 / +0 +1
+
 2025-12-03T01:59:19Z:
 * notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/19879752874 # 1647
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2025-12-03
